Fix centred alignment for mobile

--- a/src/implementations/vanilla/components/hero-banner/_hero-banner.scss
+++ b/src/implementations/vanilla/components/hero-banner/_hero-banner.scss
@@ -68,6 +68,7 @@ $_font-weight: null !default;
 
   .ecl-hero-banner__content {
     align-items: center;
+    text-align: center;
   }
 }
 
