--- a/src/implementations/vanilla/components/page-banner/_page-banner.scss
+++ b/src/implementations/vanilla/components/page-banner/_page-banner.scss
@@ -67,6 +67,7 @@ $_font-weight: null !default;
 
   .ecl-page-banner__content {
     align-items: center;
+    text-align: center;
   }
 }
 
